infrastructure/database-tools/base/pgadmin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  labels:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: database-tools
    app.kubernetes.io/component: database-admin
    app.kubernetes.io/part-of: athlefi
    app.kubernetes.io/managed-by: kustomize
spec:
  selector:
    app.kubernetes.io/name: pgadmin
    app.kubernetes.io/instance: database-tools
  ports:
    - port: 80
      targetPort: 80
      name: http
      protocol: TCP
  type: ClusterIP
